# ChangeLog for dev-haskell/gtk2hs
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.29 2007/04/29 15:09:46 dcoutts Exp $

*gtk2hs-0.9.11 (29 Apr 2007)

  29 Apr 2007; Duncan Coutts <dcoutts@gentoo.org> +gtk2hs-0.9.11.ebuild:
  Added new version

  06 Jan 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.9.ebuild,
  gtk2hs-0.9.10.ebuild, gtk2hs-0.9.10-r1.ebuild:
  Removed mozilla USE flag, fixing bug #159635. The firefox USE flag remains.
  Also block on ghc-6.6, we need a new upstream release for ghc-6.6 compat.

*gtk2hs-0.9.10-r1 (07 Apr 2006)

  07 Apr 2006; Luis F. Araujo <araujo@gentoo.org>
  +files/gtk2hs-0.9.10-store.patch, +gtk2hs-0.9.10-r1.ebuild:
  New revision with patch for the treestore.

  01 Mar 2006; Markus Rothe <corsair@gentoo.org> gtk2hs-0.9.10.ebuild:
  Added ~ppc64; bug #124469

  23 Feb 2006; Luis F. Araujo <araujo@gentoo.org> gtk2hs-0.9.10.ebuild:
  Fixed firefox useflag

  20 Feb 2006; <dcoutts@gentoo.org> -gtk2hs-0.9.7.ebuild:
  Remove old 0.9.7 version.

  20 Feb 2006; <dcoutts@gentoo.org> +files/gtk2hs-0.9.10-ghc622.patch,
  gtk2hs-0.9.10.ebuild:
  Fix building with ghc-6.2.2. Fixes bug #115657.

  14 Feb 2006; <dcoutts@gentoo.org> +files/gtk2hs-0.9.10-cflags.patch,
  gtk2hs-0.9.10.ebuild:
  Added a patch to fix the use of CFLAGS which was causing problems on sparc.
  Marked ~sparc.

  10 Feb 2006; <dcoutts@gentoo.org> -gtk2hs-0.9.6-r1.ebuild,
  -gtk2hs-0.9.8.ebuild:
  Remove old versions.

  28 Jan 2006; Simon Stelling <blubb@gentoo.org>
  -files/gtk2hs-0.9.7-ghc64.patch.gz, gtk2hs-0.9.7.ebuild:
  move compressed patches to the mirros

  14 Dec 2005; <dcoutts@gentoo.org> gtk2hs-0.9.10.ebuild:
  Make the DEPEND include the RDEPEND.

  12 Nov 2005; <dcoutts@gentoo.org> gtk2hs-0.9.10.ebuild:
  Fix failure when USE="glade -gnome" (bug #112227)

  06 Nov 2005; <dcoutts@gentoo.org> gtk2hs-0.9.10.ebuild:
  Fix generation of cairo GHCi lib.
