@@ -15,47 +15,32 @@ RMD160 9369b99cfca278e252ea6b5c25ba23bcb53603e8 files/gtk2hs-0.9.10-store.patch 
 SHA256 e47de4d759ff4e68ef9d278ddb5d8db77c463a87ac964578fe929db0ba1cf06f files/gtk2hs-0.9.10-store.patch 678
 DIST gtk2hs-0.9.10.tar.gz 830866 RMD160 2b0a5275b43c0b22588028ba7944622ff08fbbb6 SHA1 7f1632923e18af7cbbd0b6fe566841658960dfd0 SHA256 da99b248f3674acba43bd636d1c67813851290ed11860f7f99a44a882cdea924
 DIST gtk2hs-0.9.11.tar.gz 980618 RMD160 c745020329fab493752d9055c4c8bca798b5d3e1 SHA1 6150312809e99ca3bcfc9f1f851d48a5253022ce SHA256 5da4c1fd7f0b66834e2aaf919d243928f63c15411e6289b2f31dfafb50848691
-DIST gtk2hs-0.9.9.tar.gz 765222 RMD160 f048076a02bf4dabd0279c5311e7b79bed84287e SHA1 af307de49b6ad5cd9a397bb99a175a2913a3e061 SHA256 e62fa9795fd952826e1eab5b74ad125a72a38ce5c4cecb727f20da4a16c2d6f0
-EBUILD gtk2hs-0.9.10-r1.ebuild 3525 RMD160 2b1530490d11aae5d05482e93610de23a2726b8a SHA1 3bdf6bf5d26138e23f4d7aa9998dec8f70074616 SHA256 56a03176b63fab9ab605bffe8ee52f4e948cdd0f632ec03aae1f6229f239eed1
-MD5 e71265dc1b63050c300eecccae03deef gtk2hs-0.9.10-r1.ebuild 3525
-RMD160 2b1530490d11aae5d05482e93610de23a2726b8a gtk2hs-0.9.10-r1.ebuild 3525
-SHA256 56a03176b63fab9ab605bffe8ee52f4e948cdd0f632ec03aae1f6229f239eed1 gtk2hs-0.9.10-r1.ebuild 3525
-EBUILD gtk2hs-0.9.10.ebuild 3475 RMD160 b1495d1693c5fbcd747ae379957e0e67fccf4405 SHA1 53be29b1371ed324b5d1a5f48c1bae836a6762de SHA256 e7e6e9036d429fafc7904be196d6947ec2619e4737e8140a3e7ef3c1f26b5458
-MD5 8bea0cfb09ee4924d6016d414e03854f gtk2hs-0.9.10.ebuild 3475
-RMD160 b1495d1693c5fbcd747ae379957e0e67fccf4405 gtk2hs-0.9.10.ebuild 3475
-SHA256 e7e6e9036d429fafc7904be196d6947ec2619e4737e8140a3e7ef3c1f26b5458 gtk2hs-0.9.10.ebuild 3475
+EBUILD gtk2hs-0.9.10-r1.ebuild 3521 RMD160 affef7965b3e4958ba67db288d71a9abf8cbd5e4 SHA1 d5f00d1618a128a2b5afe1d8216bf711459d1870 SHA256 a0975ee3eebf738b5de9f38020311b6d9d4ac45735e1a52b6e04952702530589
+MD5 3d64382caf8d86eb975a29c7b91e2979 gtk2hs-0.9.10-r1.ebuild 3521
+RMD160 affef7965b3e4958ba67db288d71a9abf8cbd5e4 gtk2hs-0.9.10-r1.ebuild 3521
+SHA256 a0975ee3eebf738b5de9f38020311b6d9d4ac45735e1a52b6e04952702530589 gtk2hs-0.9.10-r1.ebuild 3521
 EBUILD gtk2hs-0.9.11.ebuild 2863 RMD160 49a5799ece51da8ff888be01da2c11d45ca71dd1 SHA1 1797b5fc4ab087ae3c77d6195f41791403c456e6 SHA256 5e2f20f9d414d58595e8c24e0f2b88841b8a8eb03e4579088d36e0c361376b83
 MD5 35d72cda1a0778eb5f108bc1ef1d1dd4 gtk2hs-0.9.11.ebuild 2863
 RMD160 49a5799ece51da8ff888be01da2c11d45ca71dd1 gtk2hs-0.9.11.ebuild 2863
 SHA256 5e2f20f9d414d58595e8c24e0f2b88841b8a8eb03e4579088d36e0c361376b83 gtk2hs-0.9.11.ebuild 2863
-EBUILD gtk2hs-0.9.9.ebuild 2464 RMD160 0bcaf58181001e9d47228d5c0dcec23c893db7f6 SHA1 fa6eeb6d962731bb3364a02f1a361e54ceeb2bb4 SHA256 81e781adbd51e1661c67a4d8d9f390c22d692fa14998b02aa1d141fe0008f93e
-MD5 8f475b8e9dd21e97b6e871a4b1ae24b4 gtk2hs-0.9.9.ebuild 2464
-RMD160 0bcaf58181001e9d47228d5c0dcec23c893db7f6 gtk2hs-0.9.9.ebuild 2464
-SHA256 81e781adbd51e1661c67a4d8d9f390c22d692fa14998b02aa1d141fe0008f93e gtk2hs-0.9.9.ebuild 2464
-MISC ChangeLog 3894 RMD160 1ed681ff32a5f108edb4b3d21923a8ffcf635127 SHA1 f2d4969d0eadae7bd31e1251049f662660c49c83 SHA256 ec53b304d09a552769afafb37eb35744c4299176f5f88a14bf07480dee7bfa02
-MD5 b31f77fc1e475e93761589de2c54bcfd ChangeLog 3894
-RMD160 1ed681ff32a5f108edb4b3d21923a8ffcf635127 ChangeLog 3894
-SHA256 ec53b304d09a552769afafb37eb35744c4299176f5f88a14bf07480dee7bfa02 ChangeLog 3894
+MISC ChangeLog 4066 RMD160 8603873ed25c8ea4bdc11eb35d64e823f4cbb5c7 SHA1 8fae3e919825385adef8e3ed1e09ee529c8996f5 SHA256 6f9c5b414fdccb823dddf209e291663363bb37d7fe9c1567b45d1695aa4033c4
+MD5 25515ffbb2a9fa19e5300d9b7d983467 ChangeLog 4066
+RMD160 8603873ed25c8ea4bdc11eb35d64e823f4cbb5c7 ChangeLog 4066
+SHA256 6f9c5b414fdccb823dddf209e291663363bb37d7fe9c1567b45d1695aa4033c4 ChangeLog 4066
 MISC metadata.xml 223 RMD160 eb1d7f78c4800a9e0b74e5d99b83a17d0eb247be SHA1 3be3a7139f7e71b712959fb7465f73d1bcb6ba07 SHA256 8c4b3cde4b0d254edca1f695296876df4ac96ca844d68e8152cfc5f6dbe39792
 MD5 5cf11c08544b065d0144e11273f0000d metadata.xml 223
 RMD160 eb1d7f78c4800a9e0b74e5d99b83a17d0eb247be metadata.xml 223
 SHA256 8c4b3cde4b0d254edca1f695296876df4ac96ca844d68e8152cfc5f6dbe39792 metadata.xml 223
-MD5 d165e3eb925c10e6c6316aec5b6b7477 files/digest-gtk2hs-0.9.10 241
-RMD160 935c458d76ad82bde6181be1f45d59deb695926d files/digest-gtk2hs-0.9.10 241
-SHA256 501f52c81b4d0072d05c93246175010dc391d7bf6b3e8b36f3d6eeed99a436bd files/digest-gtk2hs-0.9.10 241
 MD5 d165e3eb925c10e6c6316aec5b6b7477 files/digest-gtk2hs-0.9.10-r1 241
 RMD160 935c458d76ad82bde6181be1f45d59deb695926d files/digest-gtk2hs-0.9.10-r1 241
 SHA256 501f52c81b4d0072d05c93246175010dc391d7bf6b3e8b36f3d6eeed99a436bd files/digest-gtk2hs-0.9.10-r1 241
 MD5 8b3ded610a96da688cb8f673048b7bad files/digest-gtk2hs-0.9.11 241
 RMD160 21f2fa5e08ead39b2292fe2a0ca0f74fedbb1fab files/digest-gtk2hs-0.9.11 241
 SHA256 7eab83713a72a347386048baa114234bd534649f3922e492185a866a994aa970 files/digest-gtk2hs-0.9.11 241
-MD5 3637e0eeadfe2f6a0778a6256cb4a4f3 files/digest-gtk2hs-0.9.9 238
-RMD160 62a6c8c2be2d04e99a6fd66bfdf9bab64fa0412f files/digest-gtk2hs-0.9.9 238
-SHA256 07e2288414b25f678d9185d91ebb329615be28e2d10edd6790c8f4e804ac0ae6 files/digest-gtk2hs-0.9.9 238
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFGNLJWnUVyUObPUL4RAhpxAJwMsQVz7t7Mcthbo4LZxsMNXf5qsgCfeJK1
-CoN992GGN3BlvVNh1Syv0c0=
-=Uq8L
+iD8DBQFGNPAqnUVyUObPUL4RAms4AJ9s1Z/KLefcmOoLmTK/Us1G1kZ2WACfWWgI
+Vk4pbbNTCVgbQgfDkHu4yXE=
+=fXsI
 -----END PGP SIGNATURE-----
