@@ -1,3 +1,0 @@
-MD5 13d300e07153f37ba5893ac336b078bc gtk2hs-0.9.10.tar.gz 830866
-RMD160 2b0a5275b43c0b22588028ba7944622ff08fbbb6 gtk2hs-0.9.10.tar.gz 830866
-SHA256 da99b248f3674acba43bd636d1c67813851290ed11860f7f99a44a882cdea924 gtk2hs-0.9.10.tar.gz 830866
