@@ -1,3 +1,0 @@
-MD5 3276545190248d40c683cd42f51a1b6e gtk2hs-0.9.9.tar.gz 765222
-RMD160 f048076a02bf4dabd0279c5311e7b79bed84287e gtk2hs-0.9.9.tar.gz 765222
-SHA256 e62fa9795fd952826e1eab5b74ad125a72a38ce5c4cecb727f20da4a16c2d6f0 gtk2hs-0.9.9.tar.gz 765222
